@@ -2,4 +2,5 @@
 #define options_h
 void options();	// Ask user to open data file or enter dimensions
 void default_field(); // Set up field with preset dimensions
+void process_file();
 #endif
