@@ -1,3 +1,6 @@
+5/15/16
+-Making process_file(), which takes in a text file of field
+
 5/8/16
 -In options.cpp, need to create function default(), which sets up field size of 10 x 20
 	-Need to create separate Field class
